Bigger timeline and empty space

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
       function PlannerCtrl($scope) {
         $scope.areas = ["People", "Health", "Interests", "Organize", "Create", "Work"];
-        $scope.routines = ["Floss", "6AM wakeup", "Plan", "Review", "Love", "Photo", "Guitar"];
+        $scope.routines = ["6AM wakeup", "Dreams", "Review", "Love", "Photo", "Guitar", "Cook", "Floss"];
         $scope.meals = ['breakfast', 'AM snack', 'lunch', 'PM snack', 'dinner', 'night snack'];
         $scope.date = moment();
       
