More hours in a day

--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
                       <li>
                         <span>22</span>
                       </li>
+                      <li>
+                        <span>23</span>
+                      </li>
+                      <li>
+                        <span>24</span>
+                      </li>
                     </ul>
                   </section>
                 </div>
