--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
       function PlannerCtrl($scope) {
         $scope.areas = ["People", "Health", "Interests", "Organize", "Create", "Work"];
-        $scope.routines = ["6AM", "Dreams", "Review", "Love", "Guitar", "Cook", "Floss"];
+        $scope.routines = ["Wakeup", "Cook", "Review", "Love", "Guitar", "Health", "Floss"];
         $scope.meals = ['breakfast', 'AM snack', 'lunch', 'PM snack', 'dinner', 'night snack'];
         $scope.date = moment();
       
